@@ -1,1 +1,2 @@
 java -jar sentinel-dashboard-1.8.3.jar
+--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
